--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,11 +20,12 @@
                     </div>
                 </div>
 
-                <a href="./form_prod.ejs"><button class="btn btn-outline-warning ml-auto"
+                <a href="/form_prod"><button class="btn btn-outline-warning ml-auto"
                         type="button">Vende</button></a>
-                <a class="nav-link text-black-50" href="./product_cart.ejs"><i class="fas fa-shopping-basket"></i></a>
+
+                <a class="nav-link text-black-50" href="/product_cart.ejs"><i class="fas fa-shopping-basket"></i></a>
                 <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
-                <a class="nav-link text-black-50 d-none d-md-block" href="./register.ejs">Registro</i></a>
+                <a class="nav-link text-black-50 d-none d-md-block" href="/register.ejs">Registro</i></a>
                 <a class="nav-link text-black-50 d-none d-md-block active" href="#">Inicio de Sesión</i></a>
 
                 <!--nav mobile-->
@@ -42,7 +43,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./register.ejs"><i class="far fa-user-circle"></i> Registrate</a>
+                        <a class="nav-link" href="/register.ejs"><i class="far fa-user-circle"></i> Registrate</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="far fa-heart"></i> Favoritos</a>
