--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,41 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <%- include("partials/head", {title: "Detalle de Producto"}) %>
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 
-   
+    <link rel="stylesheet" href="/css/product_detail.css">
 
-  <body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <%- include("partials/head", {title: "Home"}) %>
+
+</head>
+
+
+<body>
+
     <!--header/javi -->
     <%- include("partials/header") %>
 
 
-  <div class="categorias-title">
-    <h2 class="title_categoria border-bottom">Todos los productos</h2>
-  </div>
-  <div class="container">
-    <div class="row">
-      <% for( let products of listado ) { %>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <section class="product-box">
-            <a href="/products/<%=products.id%>">
-              <figure class="product-box_image">
-                <img src="<%=products.image1%>" alt="imagen de producto" />
-                <article class="product-box_data">
-                  <h2><%=products.marca%></h2>
-                  <span><%=products.cantidad +" x " + products.precio%></span>
-                  <p>Comentarios  <%=products.comentarios%></p>
-                </article>
-              </figure>
-            </a>
-            </section>
-          </div>
-      <% } %> 
-          
+    <div class="container-fluid text-center">
+        <div class="row">
+            <div class="col-12 col-md-8">
+                
+                <% newproducts.forEach(function (newproducts) { %>
+
+                    <div class="col-12 col-md-8">
+                        <div class="">
+                          <img class="img1-detail pt-4" src="<%= newproducts.imagen1%>" alt=""
+                          />
+                        </div>
+    
+                    <article class="text-left">
+                        <h3 class="title-principal p-2"><%= newproducts.titulo %></h3>
+
+                        <span class="title-principal2 p-2">x<%= newproducts.cantidad %> $<%= newproducts.precio %></span>
+
+                        <span class="title-principal3 p-1">-%<%= newproducts.descuento %> <i class="fa fa-tag"></i
+                        ></span>
+                    </article>
+            </div>
+
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-12 col-md-8">
+                        <table class="table table-bordered table-detail">
+                          <h3 class="title-product text-left pt-4">Detalle del producto</h3>
+              
+                          <tr>
+                            <td class="title-table">Origen</td>
+                            <td class="subtitle-table"><%= newproducts.origen %></td>
+                          </tr>
+              
+                          <tr>
+                            <td class="title-table">Tipo Cerveza</td>
+                            <td class="subtitle-table"><%= newproducts.tipo %></td>
+                          </tr>
+              
+                          <tr>
+                            <td class="title-table">Categoria</td>
+                            <td class="subtitle-table"><%= newproducts.categoria %></td>
+                          </tr>
+              
+                          <tr>
+                            <td class="title-table">Presentacion</td>
+                            <td class="subtitle-table"><%= newproducts.presentacion %></td>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+              
+                    <div class="row">
+                      <div class="col-12 col-md-8">
+                        <h5 class="title-product text-left pt-3">Descripcion del producto</h5>
+                        <p class="subtitle-table p-1"><%= newproducts.descripcion %></p>
+                      </div>
+                    </div>
+                  </div>
+                  <a href="/delete/<%= newproducts.id %> " class="btn btn-danger">
+                      Eliminar producto
+                  </a>
+            <% }); %> 
+        </div>
     </div>
-  </div>
- </div>
-  
+
+    <!--footer/franco -->
+    <%- include("partials/footer") %>
+
+</body> 
+</html>
