Se arreglaron las carga de imagenes en crear y editar productos

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -23,7 +23,7 @@
 
           <article class="text-left">
             
-            <img src="<%= product.image1 %>" alt="product image" class="product-detail-img">
+            <img src="<%= product.image1 %>" alt="product image" class="product-detail-img" value="Show Images">
             <h3 class="title-principal p-2"><%= product.titulo %></h3>
             <span class="title-principal2 p-2"
               ><%= product.cantidad %> x <%= product.precio %>
