--- a/views/partials/body_masVendido.ejs
+++ b/views/partials/body_masVendido.ejs
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-12 col-sm-6 col-lg-3">
         <section class="product-box">
-          <a href="../productDetail.ejs">
+          <a href="/products">
             <figure class="product-box_image">
               <img src="img/mas_vendidos/cer_01.png" alt="imagen de producto" />
             </figure>
