se amejoro un poco footer / newsletter

--- a/views/partials/body_categorias.ejs
+++ b/views/partials/body_categorias.ejs
@@ -3,80 +3,67 @@
     <h2 class="title_categoria border-bottom">Categorías</h2>
   </div>
   <div class="container">
-    <ul
-      class="list-group list-group-horizontal-lg mb-5 p-0 d-flex justify-content-center"
-    >
-      <li class="list-group-item">
-        <div class="media">
-          <a href="#">
-            <img class="mr-3" src="img/categorias/ale.svg" alt="ale" />
-          </a>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <div class="media">
-          <a href="#">
-            <img class="mr-3" src="img/categorias/ipa.svg" alt="ipa" />
-          </a>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <div class="media">
-          <a href="#">
-            <img class="mr-3" src="img/categorias/trigo.svg" alt="trigo" />
-          </a>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <div class="media">
-          <a href="#">
-            <img class="mr-3" src="img/categorias/stout.svg" alt="stout" />
-          </a>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <div class="media">
-          <a href="#">
-            <img class="mr-3" src="img/categorias/lambic.svg" alt="lambic" />
-          </a>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <div class="media">
-          <a href="#">
-            <img class="mr-3" src="img/categorias/trigo.svg" alt="trigo" />
-          </a>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <div class="media">
-          <a href="#">
-            <img class="mr-3" src="img/categorias/stout.svg" alt="stout" />
-          </a>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <div class="media">
-          <a href="#">
-            <img class="mr-3" src="img/categorias/lambic.svg" alt="lambic" />
-          </a>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <div class="media">
-          <a href="#">
-            <img class="mr-3" src="img/categorias/porter.svg" alt="porter" />
-          </a>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <div class="media">
-          <a href="#">
-            <img class="mr-3" src="img/categorias/pilsen.svg" alt="pilsen" />
-          </a>
-        </div>
-      </li>
-    </ul>
+    <div class="row">
+      <div class="col-12">
+        <ul
+          class="list-group list-group-horizontal-lg mb-5 p-0 d-flex justify-content-center"
+        >
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#">
+                <img class="mr-3" src="img/categorias/ale.svg" alt="ale" />
+              </a>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#">
+                <img class="mr-3" src="img/categorias/ipa.svg" alt="ipa" />
+              </a>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#">
+                <img class="mr-3" src="img/categorias/trigo.svg" alt="trigo" />
+              </a>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#">
+                <img class="mr-3" src="img/categorias/stout.svg" alt="stout" />
+              </a>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#">
+                <img
+                  class="mr-3"
+                  src="img/categorias/lambic.svg"
+                  alt="lambic"
+                />
+              </a>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#">
+                <img class="mr-3" src="img/categorias/trigo.svg" alt="trigo" />
+              </a>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="media">
+              <a href="#">
+                <img class="mr-3" src="img/categorias/stout.svg" alt="stout" />
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 
   <!--fin de carousel-->
