--- a/public/css/style.css
+++ b/public/css/style.css
@@ -198,35 +198,9 @@
 }
 
 /* Footer */
-footer .container-fluid {
-  background-color: black;
-}
 
-.textinfo {
-  font-family: "Lato", sans-serif;
-  color: white;
-}
-.web-nav {
-  color: white;
-  border: 2px;
-  border-style: outset;
-  border-color: #fdbe01;
-}
-
-.text1 {
-  font-size: 0.9em;
-}
-
-.text2 {
-  font-size: 0.7em;
-}
-
-.img-footer-cajon {
-  width: 80%;
-}
-
-.img-footer-logo {
-  width: 70%;
+.box-f {
+  border-top: 2px solid white;
 }
 
 /*-------ofertas-------*/
