--- a/views/partials/body_newsletter.ejs
+++ b/views/partials/body_newsletter.ejs
@@ -1,30 +1,62 @@
-<section>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-2 d-none d-md-inline-block text-center align-self-end">
-        <img class="img-1" src="img/botella2.png" alt="" />
+<section class="bg-warning p-0 m-0">
+  <div class="container d-flex flex-wrap">
+    <div class="row w-100 m-auto">
+      <div class="col-3 d-flex align-items-end justify-content-start">
+        <a class="navbar-brand d-flex" href="/">
+          <img
+            src="/img/newsletter/pic_01.png"
+            width="120"
+            class="d-inline-block align-top"
+            alt="Canilla Libre"
+          />
+        </a>
       </div>
-
-      <div class="col-12 col-md-8 text-center align-self-center pb-3">
-        <h2 class="title">ESTAR SIEMPRE A LA VANGUARDIA</h2>
-
-        <h5 class="subtitle">
-          RECIBE NOTICIAS DE PRODUCTOS Y PROMOCIONES <br />
-          AL INSCRIBIRTE A NUESTRO NEWSLETTER.
-        </h5>
-
-        <input
-          type="email"
-          class="email-register"
-          name=""
-          id=""
-          placeholder="e-mail"
-        />
-        <button type="submit" class="buttom">Enviar</button>
+      <div class="col-6 pb-4">
+        <div class="categorias-title">
+          <h2 class="title_categoria border-bottom">
+            Estar siempre a la vanguardia
+          </h2>
+          <p class="text-dark">
+            Elegí como queres que te mantengamos informado con promociones,
+            cursos o nuevos productos
+          </p>
+        </div>
+        <div class="input-group">
+          <input
+            type="text"
+            class="form-control border-secondary"
+            aria-label="enviar"
+            placeholder="ingresa tu e-mail"
+          />
+          <div class="input-group-append">
+            <button
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Selecciona y envía
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Promociones</a>
+              <a class="dropdown-item" href="#">Cursos</a>
+              <a class="dropdown-item" href="#">Nuevos Productos</a>
+              <div role="separator" class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Todo lo anterior</a>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <div class="col-md-2 d-none d-md-inline-block text-center align-self-end">
-        <img class="img-2" src="img/botella1.png" alt="" />
+      <div class="col-3 d-flex align-items-end justify-content-end">
+        <a class="navbar-brand d-flex" href="/">
+          <img
+            src="/img/newsletter/pic_02.png"
+            width="120"
+            class="d-inline-block align-top"
+            alt="Canilla Libre"
+          />
+        </a>
       </div>
     </div>
   </div>
