responsive en newsletter y fotter

--- a/views/partials/body_newsletter.ejs
+++ b/views/partials/body_newsletter.ejs
@@ -1,7 +1,9 @@
 <section class="bg-warning p-0 m-0">
   <div class="container d-flex flex-wrap">
     <div class="row w-100 m-auto">
-      <div class="col-3 d-flex align-items-end justify-content-start">
+      <div
+        class="box-n-left col-lg-3 col-md-3 d-md-flex d-none align-items-end justify-content-start"
+      >
         <a class="navbar-brand d-flex" href="/">
           <img
             src="/img/newsletter/pic_01.png"
@@ -11,7 +13,7 @@
           />
         </a>
       </div>
-      <div class="col-6 pb-4">
+      <div class="col-lg-6 col-md-9 col-sm-12 col-xs-12 pb-4">
         <div class="categorias-title">
           <h2 class="title_categoria border-bottom">
             Estar siempre a la vanguardia
@@ -48,7 +50,9 @@
           </div>
         </div>
       </div>
-      <div class="col-3 d-flex align-items-end justify-content-end">
+      <div
+        class="box-n-right col-lg-3 col-md-3 d-lg-flex d-none align-items-end justify-content-end"
+      >
         <a class="navbar-brand d-flex" href="/">
           <img
             src="/img/newsletter/pic_02.png"
