--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,22 +1,20 @@
 <footer class="bg-dark px-0">
   <div class="container d-flex flex-wrap mt-0 pt-5">
     <div class="row w-100 m-auto">
-      <div class="col-4">
+      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
           <h5 class="text-light">Contacto</h5>
           <p class="text-white"><i class="fas fa-phone-alt"></i> | +54 221 000 0000<br>
         <i class="fas fa-map-marked-alt"></i> | Hace mucho tiempo en una galaxia muy muy lejana ... </p>
         <p class="text-light"><i class="fab fa-facebook text-secondary"></i> | <i class="fab fa-twitter text-secondary"></i> | 
             <i class="fab fa-youtube text-secondary"></i> | <i class="fab fa-instagram text-secondary"></i> | 
         <i class="fab fa-telegram text-secondary"></i></p>
-        
-          
       </div>
-      <div class="col-4 mb-4 border-left">
+      <div class="col-lg-4 col-md-4 d-md-flex d-none">
         <p class="font-weight-light text-white text-justify">Lorem ipsum dolor amet consectetur adipisicing elit. Saepe
             fugit fideo opariatur architecto illum perferendis quia maxime, lalala debitis
             cupiditate consequatur unde magni corrupti ad rem pariatur architecto illum perferendis quia maxime</p>
       </div>
-      <div class="col-4 d-flex align-items-end justify-content-end">
+      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 d-flex align-items-end justify-content-end">
            <a class="navbar-brand d-flex " href="/">
             <img
               src="/img/footer/logo_footer.svg"
